# Mew-

./: .gitignore  README.md
analytics/: .env.example  pyproject.toml
analytics/ffdraft/: __init__.py  config.py  db.py
analytics/ffdraft/adp/: __init__.py  ffc.py
analytics/ffdraft/backtest/: __init__.py  engine.py  models.py
analytics/ffdraft/identity/: __init__.py  resolver.py
analytics/ffdraft/nflverse/: __init__.py  loader.py
analytics/ffdraft/projections/: __init__.py  baseline.py
analytics/ffdraft/scoring/: __init__.py  engine.py  league.py  nflverse.py
analytics/ffdraft/simulator/: __init__.py  engine.py  models.py
analytics/ffdraft/sleeper/: __init__.py  client.py
analytics/ffdraft/validation/: __init__.py  metrics.py
analytics/ffdraft/valuation/: __init__.py  engine.py  models.py  tiers.py
analytics/scripts/: analyze_draft_picks.py  backtest_phase3.py  calibrate_phase4.py  edge_failure_modes.py  edge_lab.py  export_identity_audit_sample.py  ingest_ffc_adp.py  ingest_nflverse.py  ingest_sleeper_league.py  sweep_wr_weight.py  validate_db_gates.py  validate_db_identity_resolution.py  validate_db_scoring.py  validate_real_data.py
analytics/tests/: test_adp_loader.py  test_backtest_engine.py  test_draft_simulator.py  test_identity_resolver.py  test_internal_projection_baseline.py  test_nflverse_scoring_adapter.py  test_scoring_engine.py  test_valuation_engine.py
analytics/validation_output/: identity_audit_sample_20260601_000058.csv
docs/: DB_SETUP.md  STATUS.md  VALIDATION.md  VISION.md
supabase/: config.toml
(+1 files in other folders)
