[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffdraft"
version = "0.0.1"
description = "Deterministic fantasy-football draft analytics service"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "polars>=1.0",
    "nflreadpy>=0.1",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ffdraft*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
